Fixed image overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,10 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: white;
-  overflow-x: hidden;
+  width: 100%;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
